System Info Logger

--- a/VulkenGrid/CMakeLists.txt
+++ b/VulkenGrid/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
         Render/PipeLine.cpp
         Render/ShaderModule.cpp
         Render/RenderPass.cpp
+        Logger/SystemInfo.cpp
 )
 
 
