added shader compilation to cmake
I moved the build directory under VulkenGrid for consistency, though this is a somewhat arbitrary change and can be revoked easily.

I updated settings.json to specify the CMAKE_BINARY_DIRECTORY.

I decided to use the shader naming convention of NAME.TYPE.EXTENSION. This is a less arbitrary change, but it helps differentiate the shader stages while preserving the original shader name.

I removed Compileshaders.bat as we don't technically need it anymore.

I reformatted CMakeLists.txt's whitespace for consistency.

I added a separate build target for shader generation that runs only if the shader source has been changed. This target runs alongside the main build but can be ran independently if needed.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
          "name": "Launch Program",
          "type": "cppvsdbg",
          "request": "launch",
-         "program": "${workspaceFolder}/build/${command:cmake.buildType}/VulkanGridEngine.exe", // Use active build configuration
+         "program": "${workspaceFolder}/VulkenGrid/build/${command:cmake.buildType}/VulkanGridEngine.exe", // Use active build configuration
          "args": [],
          "stopAtEntry": false,
-         "cwd": "${workspaceFolder}/build/${command:cmake.buildType}",
+         "cwd": "${workspaceFolder}/VulkenGrid/build/${command:cmake.buildType}",
          "environment": [],
          "externalConsole": false,
          "preLaunchTask": "CMake: build",
