--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: Build Project
 
-# Trigger the CI on pull request or push to main
 on:
   push:
     branches:
@@ -14,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Install dependencies
+    - name: Add PPA for GLFW
+      run: sudo add-apt-repository ppa:mir-team/release
+
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y cmake g++ libvulkan-dev glfw3 libglfw3-dev
 
-    # Build project using CMake
     - name: Configure CMake
       run: |
         mkdir -p build
@@ -38,22 +37,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    # Checkout the repository
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Set up Vulkan SDK and dependencies
     - name: Set up Vulkan SDK
       run: |
         choco install vulkansdk --version=1.2.189.0
         setx VULKAN_SDK "C:\VulkanSDK\1.2.189.0"
         setx PATH "%VULKAN_SDK%\Bin;%VULKAN_SDK%\Lib;%PATH%"
 
-    # Set up CMake on Windows
     - name: Install CMake
-      uses: lukka/get-cmake@v2
+      uses: actions/setup-cmake@v3
 
-    # Build project using CMake
     - name: Configure CMake
       run: |
         mkdir build
