--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
       run: sudo add-apt-repository ppa:mir-team/release
     
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++ libvulkan-dev glfw3 libglfw3-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake g++ libvulkan-dev libglfw3 libglfw3-dev
     
     - name: Configure CMake
       run: |
@@ -38,11 +40,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
     
-    - name: Set up Vulkan SDK
-      run: |
-        choco install vulkansdk --version=1.2.189.0
-        echo "VULKAN_SDK=C:\VulkanSDK\1.2.189.0" >> $GITHUB_ENV
-        echo "C:\VulkanSDK\1.2.189.0\Bin;C:\VulkanSDK\1.2.189.0\Lib" >> $GITHUB_PATH
+    - name: Setup Vulkan SDK
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.204.0
+        vulkan-components: Vulkan-Headers, Vulkan-Loader
+        vulkan-use-cache: true
     
     - name: Setup CMake
       uses: lukka/get-cmake@latest
