--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
     
-    - name: Add PPA for GLFW
-      run: sudo add-apt-repository ppa:mir-team/release
+    - name: Install Vulkan SDK
+      run: |
+        wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.3.239-jammy.list https://packages.lunarg.com/vulkan/1.3.239/lunarg-vulkan-1.3.239-jammy.list
+        sudo apt update
+        sudo apt install vulkan-sdk
     
-    - name: Install dependencies
+    - name: Install other dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake g++ libvulkan-dev libglfw3 libglfw3-dev
+        sudo apt-get install -y cmake g++ libglfw3 libglfw3-dev
     
     - name: Configure CMake
       run: |
@@ -45,12 +49,16 @@ jobs:
     - name: Setup Vulkan SDK
       uses: humbletim/setup-vulkan-sdk@v1.2.0
       with:
-        vulkan-query-version: 1.3.204.0
-        vulkan-components: Vulkan-Headers, Vulkan-Loader
+        vulkan-query-version: 1.3.239.0
+        vulkan-components: Vulkan-Headers, Vulkan-Loader, Glslang
         vulkan-use-cache: true
     
     - name: Setup CMake
       uses: lukka/get-cmake@latest
+    
+    - name: Add Vulkan SDK to PATH
+      run: |
+        echo "$env:VULKAN_SDK/Bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     
     - name: Configure CMake
       run: |
